# AssetPanelTree

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: ALGORITHM.md  API.md
example/: README.md  benchmark.py  demo_pforest.py  demo_ptree.py  demo_visualization.py
example/outputs/: ccp_alpha_sweep.csv  node_eval.csv  tree.dot  tree_overlay.txt  tree_rank_ic_overlay.txt
src/ptree/: __init__.py  criteria.py  data_handler.py  engine.py  ensemble.py  node.py  predictors.py  visualization.py
test/: test_acceleration.py  test_boost.py  test_classification_oos.py  test_criteria_weighted.py  test_ensemble.py  test_golden_baseline.py  test_honest.py  test_low_quality_features.py  test_mean_variance.py  test_mean_variance_oos.py  test_new_apis.py  test_parallel.py  test_predictors_new.py  test_pruning.py  test_ptree.py  test_stopping_criteria.py
