[project]
name = "aptree"
version = "0.2.0"
description = "A supervised clustering algorithm for panel data, commonly used in quantitative finance to identify time-varying, cross-sectional predictability regimes."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ElenYoung", email = "elenyoung@example.com" }
]
keywords = [
    "panel-data",
    "machine-learning",
    "quantitative-finance",
    "decision-tree",
    "supervised-clustering",
    "asset-pricing",
    "predictability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.23.0",
    "pandas>=1.5.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
]
parallel = [
    "joblib>=1.2.0",
]
fast = [
    "scipy>=1.9.0",
]
boost = [
    "lightgbm>=3.3.0",
]
dev = [

    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
all = [
    "aptree[viz,parallel,fast,boost,dev]",
]



[project.urls]
Homepage = "https://github.com/ElenYoung/AssetPanelTree"
Repository = "https://github.com/ElenYoung/AssetPanelTree.git"
Documentation = "https://github.com/ElenYoung/AssetPanelTree#readme"
Issues = "https://github.com/ElenYoung/AssetPanelTree/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ptree"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
addopts = "-v --tb=short"
